--- a/pages/preguntasfecuentes.html
+++ b/pages/preguntasfecuentes.html
@@ -10,21 +10,25 @@
 
 <body>
     <header>
-            <h1>Serro Revestimientos</h1>
-        <div>
+        <div class="bloque1">
+            <h1 class="titulo">Serro Revestimientos</h1>
+            <img class="logo"src="../img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="100" height="100">
+        <div class="buscador">
             <input type="text" name="q" placeholder="Buscar">
             <input type="submit" value="Buscar">
         </div>
+    </div>
+
 
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/pisos.html">Pisos</a></li>
                 <li><a href="../pages/paredes.html">Paredes</a></li>
                 <li><a href="../pages/preguntasfecuentes.html">Preguntas frecuentes</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
-            <h2>Preguntas frecuentes</h2>
+            <h2 class="titulo-pisos">Pisos</h2>
         </nav>
     </header>
 
