--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>Serro Revestimientos</title>
+    <title>Serro Revestimientos-Fabrica de revestimientos para pisos y paredes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name= "viewport">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+
+
 </head>
 
 <body>
     <header>
         <div class="bloque1"> 
-            <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo"src="./img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="100" height="100">
+            <h1 class="titulo">Serros Revestimientos</h1>
+            <img class="logo"src="./img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="200" height="200">
             <div class="buscador">
                 <form action="">
                 <input type="text" name="q" placeholder="Buscar">
@@ -69,10 +71,12 @@
         <div class="contenedor-mapa"> 
             
             <h3>Donde encontrarnos</h3>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52277.74875134534!2d-58.46090073489417!3d-35.022740370230764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bd2da71a3b65fd%3A0x4caffd42940be4c5!2sSan%20Vicente%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1686176860161!5m2!1ses!2sar" width="300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            
+        <div>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52277.74875134534!2d-58.46090073489417!3d-35.022740370230764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bd2da71a3b65fd%3A0x4caffd42940be4c5!2sSan%20Vicente%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1686176860161!5m2!1ses!2sar" width="300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div>   
             <img class="qr" src="./img/WhatsApp Image 2023-07-02 at 17.20.16.jpeg" alt="./img.qr" width="150"height= "150">
+        </div> 
         </div>
     </aside>
     </div> 
@@ -87,6 +91,6 @@
             </ul>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
