--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <title>contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta name= "viewport">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="description" content="Revestimientos ecofriendly para pisos y paredes">
+    <meta name="keywords" content="pisos, paredes,interiores, exteriores, revestimientos">
 </head>
 
 <body>
     <header>
-        <div class="bloque1">
+        <div class="bloque1"> 
             <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo"src="../img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="100" height="100">
-        <div class="buscador">
-            <input type="text" name="q" placeholder="Buscar">
-            <input type="submit" value="Buscar">
+            <img class="logo"src="../img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="200" height="200">
+            <div class="buscador">
+                <form action="">
+                <input type="text" name="q" placeholder="Buscar">
+                <input type="submit" value="Buscar">
+                </form>
+            </div>
         </div>
-    </div>
-
 
         <nav>
             <ul class="nav-list">
@@ -28,12 +36,11 @@
                 <li><a href="../pages/preguntasfecuentes.html">Preguntas frecuentes</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
-            <h2 class="titulo-pisos">Pisos</h2>
         </nav>
     </header>
 
     <main>
-        <div>
+        <div class="consulta">
             <label for="Nombre">Nombre y Apellido</label>
             <li><input type="text" id="Nombre"placeholder="nombre y apellido"></li>
         </div>
@@ -60,15 +67,16 @@
 
     <aside>
         <div class="contenedor-mapa"> 
-            <link rel="stylesheet" href="./css/styles.css">
+            
             <h3>Donde encontrarnos</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52277.74875134534!2d-58.46090073489417!3d-35.022740370230764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bd2da71a3b65fd%3A0x4caffd42940be4c5!2sSan%20Vicente%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1686176860161!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52277.74875134534!2d-58.46090073489417!3d-35.022740370230764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bd2da71a3b65fd%3A0x4caffd42940be4c5!2sSan%20Vicente%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1686176860161!5m2!1ses!2sar" width="300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </aside>
 
     <footer>
-        <div>
-            <ul>
+        <div class="footer">
+            <ul class="datos">
                 <li>WhatsApp:    +549 2224497390</li>
                 <li>Instagram:   @serrorevestimientos</li>
                 <li>Facebook:     Serro Revestimientos</li>
