--- a/pages/preguntasfecuentes.html
+++ b/pages/preguntasfecuentes.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <title>preguntas frecuentes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta name= "viewport">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="description" content="Revestimientos ecofriendly para pisos y paredes">
+    <meta name="keywords" content="pisos, paredes,interiores, exteriores, revestimientos">
+
 </head>
 
 <body>
@@ -28,7 +36,7 @@
                 <li><a href="../pages/preguntasfecuentes.html">Preguntas frecuentes</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
-            <h2 class="titulo-pisos">Pisos</h2>
+            <h2 class="titulo-pisos">Preguntas Frecuentes</h2>
         </nav>
     </header>
 
