--- a/pages/preguntasfecuentes.html
+++ b/pages/preguntasfecuentes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>preguntas frecuentes</title>
+    <title>preguntas frecuentes-Fabrica de revestimientos para pisos y paredes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name= "viewport">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,14 +18,16 @@
 
 <body>
     <header>
-        <div class="bloque1">
+        <div class="bloque1"> 
             <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo"src="../img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="100" height="100">
-        <div class="buscador">
-            <input type="text" name="q" placeholder="Buscar">
-            <input type="submit" value="Buscar">
+            <img class="logo" src="../img/logo.jpg" alt="logo" width="200" height="200">
+            <div class="buscador">
+                <form action="">
+                <input type="text" name="q" placeholder="Buscar">
+                <input type="submit" value="Buscar">
+                </form>
+            </div>
         </div>
-    </div>
 
 
         <nav>
@@ -49,8 +51,8 @@
     </main>
 
     <footer>
-        <div>
-            <ul>
+        <div class="footer">
+            <ul class="datos">
                 <li>WhatsApp:    +549 2224497390</li>
                 <li>Instagram:   @serrorevestimientos</li>
                 <li>Facebook:     Serro Revestimientos</li>
@@ -59,6 +61,6 @@
             </ul>
         </div>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
