--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <link rel="stylesheet" href="./css/styles.css">
 
 
+
+
 </head>
 
 <body>
     <header>
         <div class="bloque1"> 
-            <h1 class="titulo">Serros Revestimientos</h1>
-            <img class="logo"src="./img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="200" height="200">
+            <h1 class="titulo">Serro Revestimientos</h1>
+            <img class="logo" src="./img/logo.jpg" alt="logo" width="200" height="200">
             <div class="buscador">
                 <form action="">
                 <input type="text" name="q" placeholder="Buscar">
@@ -44,7 +46,7 @@
         La Vanguardia y el diseño nos distinguen sobre el resto</p>
         </div>
         
-        <div>
+        <div class="carousel">
             
             <h2 class="titulo-destacados">Productos Destacados</h2>
             <ul class="contenedor-img">
