--- a/pages/paredes.html
+++ b/pages/paredes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>paredes</title>
+    <title>Paredes-Fabrica de revestimientos para pisos y paredes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name= "viewport">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,16 @@
 
 <body>
     <header>
-        <div class="bloque1">
+        <div class="bloque1"> 
             <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo"src="../img/83d5bf06-fbc2-4ab4-9c92-fad7ecf091d9.jpg" alt="" width="100" height="100">
-        <div class="buscador">
-            <input type="text" name="q" placeholder="Buscar">
-            <input type="submit" value="Buscar">
+            <img class="logo" src="../img/logo.jpg" alt="logo" width="200" height="200">
+            <div class="buscador">
+                <form action="">
+                <input type="text" name="q" placeholder="Buscar">
+                <input type="submit" value="Buscar">
+                </form>
+            </div>
         </div>
-    </div>
 
 
         <nav>
@@ -41,21 +43,32 @@
 
     <main>
             <h3>Interiores-Exteriores</h3>
-        <div class="contenedor">
-            <img src="../img/img.revestimiento3.webp" alt="./img.revestimiento2"width="300"height="200">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, fugiat laudantium optio nemo velit omnis magnam vero, animi illum magni ipsam excepturi culpa sed adipisci blanditiis minus doloribus eaque quisquam</p>
-        </div>
-
-        <div>
-            <button style="background-color: maroon;">marron</button>
-            <button style="background-color: rgb(238, 238, 106);">beige</button>
-            <button style="background-color: peru;">arena</button>
-        </div>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../img/revestimiento ekos.jpg" class="img-fluid" alt="img1">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/revestimiento adoquin.jpg" class="img-fluid" alt="img2">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/revestimiento liston.jpg" class="img-fluid" alt="img3">
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
     </main>
 
     <footer>
-        <div>
-            <ul>
+        <div class="footer">
+            <ul class="datos">
                 <li>WhatsApp:    +549 2224497390</li>
                 <li>Instagram:   @serrorevestimientos</li>
                 <li>Facebook:     Serro Revestimientos</li>
@@ -65,6 +78,6 @@
         </div>
     </footer>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
