--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <header>
         <div class="bloque1"> 
             <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo" src="../img/logo.jpg" alt="logo" width="200" height="200">
+            <img class="logo" src="../img/logo.jpeg" alt="logo" width="200" height="200">
             <div class="buscador">
                 <form action="">
                 <input type="text" name="q" placeholder="Buscar">
@@ -38,7 +38,7 @@
             </ul>
         </nav>
     </header>
-
+    <div class="prueba">
     <main>
         <div class="consulta">
             <label for="Nombre">Nombre y Apellido</label>
@@ -81,7 +81,7 @@
             </div>
         </aside>
     </aside>
-
+</div>
     <footer>
         <div class="footer">
             <ul class="datos">
