--- a/pages/paredes.html
+++ b/pages/paredes.html
@@ -19,7 +19,7 @@
     <header>
         <div class="bloque1"> 
             <h1 class="titulo">Serro Revestimientos</h1>
-            <img class="logo" src="../img/logo.jpg" alt="logo" width="200" height="200">
+            <img class="logo" src="../img/logo.jpeg" alt="logo" width="200" height="200">
             <div class="buscador">
                 <form action="">
                 <input type="text" name="q" placeholder="Buscar">
